tests/ui/parser/raw/raw-string-2.rs
fn main() {
    let x = r###"here's a long string"# "# "##;
    //~^ ERROR unterminated raw string
}
